<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/ibClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="43dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/close_image_button"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvQuestionWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="86dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/title_galaxy"
        android:textSize="43sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibClose"
        tools:text="Galaxy" />

    <LinearLayout
        android:id="@+id/layoutVariants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionWord">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never" />

<!--        <LinearLayout-->
<!--            android:id="@+id/layoutAnswer1"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="70dp"-->
<!--            android:background="@drawable/shape_rounded_containers"-->
<!--            android:gravity="center_vertical"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:id="@+id/tvVariantNumber1"-->
<!--                android:layout_width="40dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_marginStart="12dp"-->
<!--                android:background="@drawable/shape_rounded_variants"-->
<!--                android:gravity="center"-->
<!--                android:text="1"-->
<!--                android:textColor="#888992"-->

<!--                android:textSize="16sp" />-->

<!--            <TextView-->
<!--                android:id="@+id/tvVariantValue1"-->
<!--                style="@style/TextViewVariantsStyle"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="8dp"-->
<!--                android:fontFamily="@font/rubik_regular"-->
<!--                android:text="Сломать"-->
<!--                tools:ignore="HardcodedText" />-->

<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:id="@+id/layoutAnswer2"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="60dp"-->
<!--            android:layout_marginTop="18dp"-->
<!--            android:background="@drawable/shape_rounded_containers"-->
<!--            android:gravity="center_vertical"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:id="@+id/tvVariantNumber2"-->
<!--                android:layout_width="40dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_marginStart="12dp"-->
<!--                android:background="@drawable/shape_rounded_variants"-->
<!--                android:gravity="center"-->
<!--                android:text="2"-->
<!--                android:textColor="#888992"-->

<!--                android:textSize="16sp" />-->

<!--            <TextView-->
<!--                android:id="@+id/tvVariantValue2"-->
<!--                style="@style/TextViewVariantsStyle"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="8dp"-->
<!--                android:fontFamily="@font/rubik_regular"-->
<!--                android:text="Сон"-->
<!--                tools:ignore="HardcodedText" />-->

<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:id="@+id/layoutAnswer3"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="60dp"-->
<!--            android:layout_marginTop="18dp"-->
<!--            android:background="@drawable/shape_rounded_containers"-->
<!--            android:gravity="center_vertical"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:id="@+id/tvVariantNumber3"-->
<!--                android:layout_width="40dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_marginStart="12dp"-->
<!--                android:background="@drawable/shape_rounded_variants"-->
<!--                android:gravity="center"-->
<!--                android:text="3"-->
<!--                android:textColor="#888992"-->

<!--                android:textSize="16sp" />-->

<!--            <TextView-->
<!--                android:id="@+id/tvVariantValue3"-->
<!--                style="@style/TextViewVariantsStyle"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="8dp"-->
<!--                android:text="Галактика"-->
<!--                tools:ignore="HardcodedText" />-->

<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:id="@+id/layoutAnswer4"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="60dp"-->
<!--            android:layout_marginTop="18dp"-->
<!--            android:background="@drawable/shape_rounded_containers"-->
<!--            android:gravity="center_vertical"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:id="@+id/tvVariantNumber4"-->
<!--                android:layout_width="40dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_marginStart="12dp"-->
<!--                android:background="@drawable/shape_rounded_variants"-->
<!--                android:gravity="center"-->
<!--                android:text="4"-->
<!--                android:textColor="#888992"-->

<!--                android:textSize="16sp" />-->

<!--            <TextView-->
<!--                android:id="@+id/tvVariantValue4"-->
<!--                style="@style/TextViewVariantsStyle"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="8dp"-->
<!--                android:fontFamily="@font/rubik_regular"-->
<!--                android:text="Утюг"-->
<!--                tools:ignore="HardcodedText" />-->

<!--        </LinearLayout>-->

    </LinearLayout>

    <Button
        android:id="@+id/btnSkip"
        android:layout_width="310dp"
        android:layout_height="58dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#2574FF"
        android:text="@string/button_skip"
        android:textAllCaps="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0EAD69"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_height="136dp">

        <ImageView
            android:id="@+id/ivResultIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="18dp"
            android:contentDescription="@string/correct_answer_icon"
            android:src="@drawable/ic_correct"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvResultMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/title_correct"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivResultIcon"
            app:layout_constraintStart_toEndOf="@+id/ivResultIcon"
            app:layout_constraintTop_toTopOf="@+id/ivResultIcon" />

        <android.widget.Button
            android:id="@+id/btnContinue"
            android:layout_width="310dp"
            android:layout_height="58dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/shape_button_footer"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/continues"
            android:textAllCaps="true"
            android:textColor="#0EAD69"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivResultIcon"
            tools:ignore="HardcodedText" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
